# fstransfer

./: .gitignore  Cargo.toml  README.md  makefile
src/: file_watcher.rs  log.rs  main.rs  ws_client.rs  ws_server.rs
