[package]
name = "fstransfer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
async-channel = "2.3.1"
async-tungstenite = { version="0.29.1", features = ["tokio-runtime", "tokio-native-tls", "tokio-native-tls", "async-tls"] }
axum = { version="0.8.1", features = ["ws"] }
chrono = "0.4.40"
dotenv = "0.15.0"
futures-util = "0.3.31"
log = "0.4.26"
log4rs = "1.3.0"
notify = "8.0.0"
path-absolutize = "3.1.1"
tokio = { version="1.43.0", features = ["full"] }
